--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-crispy-forms==1.9.2
 django-heroku==0.3.1
 django-on-heroku==1.1.2
 gunicorn==20.0.4
+Pillow @ file:///opt/concourse/worker/volumes/live/be1e8a56-c4be-4ffe-4fa7-5a0e9c460b1a/volume/pillow_1594307312933/work
 psycopg2==2.8.5
 psycopg2-binary==2.8.6
 pytz==2020.1
