--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 django-on-heroku==1.1.2
 gunicorn==20.0.4
 Pillow==8.0.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.6
 pytz==2020.1
 sqlparse==0.3.1
